fixed the animation size on mobile

--- a/public/src/css/app.css
+++ b/public/src/css/app.css
@@ -56,7 +56,7 @@ a:hover {
     text-align: start;
     padding: 0;
   }
-}
+  
 .description {
   max-width: 50%;
   padding: 50px;
@@ -290,12 +290,26 @@ footer::after {
   /* clip-path: url("#wave"); */
   background-color: #00796b;
 }
-
+.gooey-text{
+  font-family: 'open Sans', sans-serif; 
+  position:relative; z-index: 1;  padding: 15px;  right: 0;
+  left: 0;
+  top: 59px;
+  margin: auto; text-align: center;
+}
 @media only screen and (max-width: 700px) {
   footer::after {
     clip-path: none;
     height: 150px;
   }
+  .gooey {
+    width: 250px;
+    height: 200px;
+  }
+  .gooey-text {
+    font-size:20px;
+  }
+}
 }
 
 footer .ball {
